<resources>
    <string name="app_name">CAM</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_events">Eventos</string>
    <string name="menu_partner">Acceso a socios</string>
    <string name="menu_login">Iniciar sesion</string>
    <string name="menu_soccer">Futbol</string>
    <string name="menu_contact">Contacto</string>
    <string name="menu_invited">Invitados</string>
    <string name="menu_news">Noticias</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="loren_ipsum">
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
        At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
        no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
        consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        sed diam voluptua.
        Lorem ipsum dolor sit amet,
        consetetur sadipscing elitr,
        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        sed diam voluptua.
        At vero eos et accusam et justo duo dolores et ea rebum.
        Stet clita kasd gubergren,
        no sea takimata sanctus est Lorem ipsum dolor sit amet.
        Lorem ipsum dolor sit amet,
        consetetur sadipscing elitr,
        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        sed diam voluptua.
    </string>
    <string name="loren_xxipsum">
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
        At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
        no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
        consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        sed diam voluptua.
    </string>
    <string name="test_fecha_publicacion">  fecha de la publicacion</string>
    <string name="test_titulo_largo">Titulo de la noticia de doble fila de longitud</string>
    <string name="button_charge_more">Cargar mas Noticias</string>
    <string name="test_direction_event">direcion de evento</string>
    <string name="test_title_event">Título del evento</string>
    <string name="event_title">EVENTOS</string>
    <string name="news_title">NOTICIAS</string>
    <string name="profile_title">MI PERFIl</string>
    <string name="state_account_title">ESTADO DE CUENTA</string>
    <string name="receipt_copy">RECIBOS 2020</string>
    <string name="profile_hi_copy">Hola</string>
    <string name="partner_number_copy">No de socio:</string>
    <string name="profile_type_membership_copy">Tipo de membresía:</string>
    <string name="profile_membre_since_copy">Socio desde:</string>
    <string name="state_account_copy">Estado de cuenta</string>
    <string name="profile_invited_copy">Invitados</string>
    <string name="reservations_copy">Reservaciones</string>
    <string name="welcome_copy">Bienvenido</string>
    <string name="notifications_copy">Notificaciones</string>
    <string name="notifications_title">NOTIFICACIONES</string>
    <string name="log_out_copy">Cerrar sesión</string>
    <string name="profile_copy">Mi perfil</string>
    <string name="your_balance_copy">Tu saldo es de:</string>
    <string name="receipt_title_copy">Detalle del recibo</string>
    <string name="nro_operation_copy">Número de operación:</string>
    <string name="date_pay_copy">Fecha de pago:</string>
    <string name="concept_copy">Concepto:</string>
    <string name="pay_amount_copy">Monto pagado:</string>
    <string name="see_pdf_copy">Ver PDF</string>
    <string name="request_fact_copy">Solicitar factura</string>
    <string name="begin_date_copy">del</string>
    <string name="end_date_copy">al</string>
    <string name="about_event_copy">Acerca del evento</string>
    <string name="ingresar_copy">Ingresar</string>
    <string name="details_title">DETALLE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="session_expired">La sesión ha caducado</string>
    <string name="try_again_login">Iniciar sesión nuevamente</string>
    <string name="try_again_login_log_out">Inicia sesión nuevamente</string>
    <string name="accept_button">Aceptar</string>
    <string name="continue_">Continuar</string>
    <string name="not_i_am"><u>No soy yo</u></string>
    <string name="password">Contraseña</string>
    <string name="date_events">Fecha del evento</string>
    <string name="dir_events">Dirección del evento</string>
    <string name="olvidates_password">¿Olvidaste tu contraseña?</string>
    <string name="recovery_pass"><u>Recupérala aqui</u></string>
    <string name="recovery_pass_botton">Recuperar contraseña</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="repet_pass">Confirmar nueva contraseña</string>
    <string name="update_pass">ACTUALIZAR CONTRASEÑA</string>
    <string name="recovery_pass_title_alert">Recuperar tu contraseña</string>
    <string name="recovery_pass_body_alert">Te hemos enviado una liga para que puedas reestablecer tu contraseña</string>
    <string name="recovery_pass_footer_alert">Encuentra el email en tu bandeja de entrada o correo no deseado</string>
    <string name="api_rest_noticias_all">https://www.centroasturianodemexico.mx/api/v1/noticias</string>
    <string name="api_rest_noticias_id">https://www.centroasturianodemexico.mx/api/v1/noticias/</string>
    <string name="api_rest_eventos_all">https://www.centroasturianodemexico.mx/api/v1/eventos</string>
    <string name="api_rest_eventos_id">https://www.centroasturianodemexico.mx/api/v1/eventos/</string>
    <string name="api_rest_login_num_socio">https://www.centroasturianodemexico.mx/api/v1/usuarios/login/user</string>
    <string name="api_rest_login_pass">https://www.centroasturianodemexico.mx/api/v1/usuarios/login/password</string>
    <string name="api_rest_membresia">https://www.centroasturianodemexico.mx/api/v1/membresias/</string>
    <string name="api_rest_membresias_movimientos">https://www.centroasturianodemexico.mx/api/v1/membresias/</string>
    <string name="api_rest_notificaciones">https://centroasturianodemexico.mx/api/v1/membresias/</string>
    <string name="api_rest_recibos">https://centroasturianodemexico.mx/api/v1/membresias/</string>
    <string name="api_rest_recibo">https://centroasturianodemexico.mx/api/v1/membresias/</string>
    <string name="vacio" />
    <string name="api_rest_recovery_account">https://www.centroasturianodemexico.mx/api/v1/usuarios/recuperar</string>
    <string name="update_notification">https://centroasturianodemexico.mx/api/v1/notificaciones/</string>
    <string name="default_notification_channel_id">com.virtualcode7ecuadorvigitrack.myapplication.notificaciones</string>
    <string name="acceso_socios_menu_drawer"><em>Acesso a socios</em></string>
    <string name="cuestionario">https://centroasturianodemexico.mx/api/v1/membresias/cuestionarios/</string>
    <string name="semaforo_amarillo_rojo">https://centroasturianodemexico.mx/api/v1/membresias/beneficiarios/id/</string>
    <string name="register">Registrate</string>
    <string name="not_read">Marcar como no leído</string>
    <string name="delete_notification">Eliminar</string>
    <string name="see_in_app">Ver en app</string>
    <string name="realize_invitacion">Realiza tu invitación ahora</string>
    <string name="realize_reserva">Realiza tu reservación ahora</string>
    <string name="list_invitaciones">Lista de invitaciones actuales y próximos</string>
    <string name="solicitud_invitados">Solicitud de invitados</string>
    <string name="add_date">Agregar fecha</string>
    <string name="add_invitados">Agregar invitados</string>
    <string name="note_add_invitados">*Puedes agregar más de 1 invitado</string>
    <string name="resumer_solicitud">Resumen de solicitud</string>
    <string name="location">Ubicación:</string>
    <string name="list_invitados">Lista de invitados</string>
    <string name="name_cam">Centro Asturiano de México A.C</string>
    <string name="all_obligatorios">*Todos los campos son obligatorios</string>
    <string name="menor_edad">Menor de edad</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="add">AGREGAR</string>
    <string name="lbl_fechas_quince_dias">Las fechas a ingresar deben ser quince días hábiles a partir del día de la solicitud.</string>
    <string name="text_empty">Campo obligatorio</string>
    <string name="my_account">Mi Cuenta</string>
    <string name="status_account">Estado de Cuenta</string>
    <string name="my_profile">Mi Perfil</string>
    <string name="notifications">Notificaciones</string>
    <string name="recive">Recibos</string>
    <string name="off_network">Sin Acceso a Internet</string>
    <string name="upload_photo_invitado">Subir foto identificación del invitado</string>
    <string name="upload_other_photo_dni">SUBIR OTRA IMAGEN</string>
    <string name="delete_photo_dni">ELIMINAR IMAGEN</string>
    <string name="name_photo_upload">INE-escaner.png</string>
    <string name="process_solicitud_invitado">PROCESAR LA SOLICITUD</string>
    <string name="upload_photo_galeria">SUBIR UN ARCHIVO</string>
    <string name="take_photo">TOMAR FOTO</string>
    <string name="datos_vacios">Datos vacios</string>
    <string name="solicitud_enviada_title">Su solicitud ha sido enviada satisfactoriamente.</string>
    <string name="solicitud_enviada_body">En breve se te dará respuesta de la solicitud enviada. Puedes seguir el estatus en tu aplicación, en el área de invitados.</string>
    <string name="permisos_store">Se requieren permisos de almacenamiento interno.</string>
    <string name="title_permisos_store">Permisos</string>
    <string name="list_reservas">Historial de reservaciones 2021</string>
    <string name="type_habitaciones">Tipo de habitación:</string>
    <string name="reservas_mayus">RESERVACIONES</string>
    <string name="forma_pay">Forma de pago:</string>
    <string name="invitado_duplicado">El invitado de la solicitud esta duplicado.</string>
    <string name="solicitud_reservas">Solicitud de reservaciones</string>
    <string name="lbl_bienvenido">Bienvenido</string>
    <string name="add_reserva">Agregar reservación</string>
    <string name="for_socio">Para socio</string>
    <string name="for_invitado">Para invitado</string>
    <string name="type_reserva">¿Qué tipo de reservación desea realizar?</string>
    <string name="save_and_next">Guardar y siguiente</string>
    <string name="anterior">Anterior</string>
    <string name="siguiente">Siguiente</string>
    <string name="type_reserva_title">Tipo de reservación :</string>
    <string name="socio">Socio</string>
    <string name="num_habitaciones_personas"># Número de habitacion(es) y persona(s)</string>
    <string name="obligatorios">* Campo obligatorio</string>
    <string name="hotel_nuevo">Hotel nuevo</string>
    <string name="hotel_anterior">Hotel anterior</string>
    <string name="hotel_register_question">¿En que hotel desea hacer la reservación?</string>
    <string name="num_habitaciones">Número de habitaciones*</string>
    <string name="add_habitaciones">Agregar habitaciones</string>
    <string name="elegit_type_habitacion">Elige un tipo de habitación</string>
    <string name="nota_paquete">*No aplica en vacaciones, puentes,  fines de semana y días festivos</string>
    <string name="hint_add_person_extra">Número de personas extras*</string>
    <string name="save">GUARDAR</string>
    <string name="title_add_person_extra">Agregar persona extra</string>
</resources>