<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:visible="false"
        android:id="@+id/opc_noticias_drawer"
        android:title="Noticias"
        android:icon="@drawable/ic_icon_news"
        android:checkable="true"
        >
    </item>
    <item
        android:visible="false"
        android:id="@+id/opc_eventos_drawer"
        android:title="Eventos"
        android:icon="@drawable/ic_calendar"
        android:checkable="true"
        >
    </item>
    <item
        android:visible="false"
        android:id="@+id/opc_frutbol_drawer"
        android:title="Futbol"
        android:icon="@drawable/ic_soccer"
        android:checkable="true"
        >
    </item>
    <item
        android:visible="false"
        android:id="@+id/opc_contacto_drawer"
        android:title="Contacto"
        android:icon="@drawable/ic_phone"
        android:checkable="true"
        >
    </item>
    <item
        android:visible="false"
        android:id="@+id/opc_acceso_drawer"
        android:title="@string/acceso_socios_menu_drawer"
        android:icon="@drawable/ic_login"
        android:checkable="true"
        >
    </item>
    <item
        android:visible="false"
        android:id="@+id/opc_my_account_inicio_login"
        android:title="@string/my_account"
        android:icon="@drawable/ic_profile"
        android:checkable="true"
        >
    </item>
    <item
        android:visible="false"
        android:id="@+id/opc_status_account_inicio_login"
        android:title="@string/status_account"
        android:icon="@drawable/ic_state_account_white"
        android:checkable="true"
        >
    </item>
    <item
        android:visible="false"
        android:id="@+id/opc_recivos_inicio_login"
        android:title="@string/recive"
        android:icon="@drawable/ic_receipt_white"
        android:checkable="true"
        >
    </item>
    <item
        android:visible="false"
        android:id="@+id/opc_notification_inicio_login"
        android:title="@string/notifications"
        android:icon="@drawable/ic_email_close"
        android:checkable="true"
        >
    </item>
</menu>