<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_gradiente"
    tools:context=".fragments.AccesoSociosFragment"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_marginTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_main_logo"
        android:layout_marginBottom="20dp"
        >
    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="@dimen/margin_textinput_num_socio"
        android:layout_marginRight="@dimen/margin_textinput_num_socio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_profile"
        app:startIconTint="@color/white"
        android:hint="@string/partner_number_copy"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#8c2E3286"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="40dp"
            android:id="@+id/id_textviewnumSocio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_button_validar"
        android:layout_marginTop="@dimen/margin"
        android:layout_width="210dp"
        android:layout_height="58dp"
        android:textStyle="bold"
        android:textColor="@color/ClubColorPrimary"
        android:text="@string/continue_"
        android:textSize="17sp"
        >
    </androidx.appcompat.widget.AppCompatButton>

    <TextView

        android:layout_marginTop="0.11in"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/olvidates_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <TextView

        android:id="@+id/id_recovery_text"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/recovery_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </TextView>
    <TextView
        android:id="@+id/id_newSocio_text"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/textsize_17sp"
        android:textColor="@color/white"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </TextView>

</androidx.appcompat.widget.LinearLayoutCompat>