<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/margin_10"
    >
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon_alert"
        android:scaleType="centerCrop"
        >
    </ImageView>
    <TextView
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:textSize="@dimen/textsize_22sp"
        android:textColor="@color/ClubColorPrimary"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/recovery_pass_title_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:textSize="@dimen/textsize_17sp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/recovery_pass_body_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:textSize="@dimen/textsize_17sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/recovery_pass_footer_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/id_button_accep"
        android:layout_marginTop="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:text="ACEPTAR"
        android:textColor="@color/ClubColorPrimary"
        >
    </com.google.android.material.button.MaterialButton>

</androidx.appcompat.widget.LinearLayoutCompat>