<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.fragment_reservas.AddHabitacionesFragment"
    android:orientation="vertical"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/idLinearTopAddHabitaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_habitaciones"
                    android:textSize="@dimen/textsize_22sp"
                    android:textColor="@color/ClubColorPrimary"
                    android:fontFamily="@font/roboto_black"
                    android:gravity="center"
                    >
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_obligatorios"
                    android:textSize="@dimen/textsize_17sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/margin_15"
                    >
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/num_habitaciones_personas"
                    android:textSize="@dimen/textsize_22sp"

                    android:textColor="@color/ClubColorPrimary"
                    android:fontFamily="@font/roboto_black"

                    android:layout_marginBottom="@dimen/margin_10"
                    >
                </TextView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/ClubColorPrimary"
                    >
                </View>


                <TextView
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/obligatorios"
                    android:textSize="@dimen/textsize_17sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_marginBottom="@dimen/margin_15"
                    >
                </TextView>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/num_habitaciones"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <include layout="@layout/view_tipo_add_habitacion">
            </include>

            <TextView
                android:layout_marginTop="@dimen/margin_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Estos paquetes promocionales para socios pueden interesarte:"
                android:textSize="@dimen/textsize_22sp"
                android:textColor="@color/ColorIconFechas"
                android:fontFamily="@font/roboto_black"
                android:layout_marginBottom="@dimen/margin_15"
                >
            </TextView>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:listitem="@layout/item_t ipo_paquete"
                >
            </androidx.recyclerview.widget.RecyclerView>



            <TextView
                android:layout_marginTop="@dimen/margin_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nota_paquete"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginBottom="@dimen/margin_15"
                >
            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>